--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@components/*": ["src/app/components/*"],
       "@pages/*": ["src/app/pages/*"],
       "@services/*": ["src/app/services/*"],
-      "@models/*": ["src/app/models/*"]
+      "@models/*": ["src/app/models/*"],
+      "@env/*": ["src/environments/*"]
     }
   },
   "angularCompilerOptions": {
