--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # Node
 /node_modules
+front-proxy/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -42,5 +43,6 @@ testem.log
 Thumbs.db
 
 package-lock.json
+front-proxy/package-lock.json
 
 .env
