--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 
 # Node
 /node_modules
-front-proxy/node_modules
+packages/front-proxy/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -43,6 +43,8 @@ testem.log
 Thumbs.db
 
 package-lock.json
-front-proxy/package-lock.json
 
 .env
+.env.*
+
+dist
