--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@
 /bazel-out
 
 # Node
-/node_modules
-packages/front-proxy/node_modules
+node_modules
 npm-debug.log
 yarn-error.log
 
@@ -30,7 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
+.angular
 .sass-cache/
 /connect.lock
 /coverage
