--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.3.0",
     "file-saver": "^2.0.5",
     "lottie-web": "^5.12.2",
+    "ngx-editor": "^17.5.4",
     "ngx-lottie": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
