renaming admin project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-blog-admin",
+  "name": "bahdashych-on-security-admin",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
