--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "personal-blog-admin": {
+    "bahdashych-on-security-admin": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/personal-blog-admin",
+            "outputPath": "dist/bahdashych-on-security-admin",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -73,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "personal-blog-admin:build:production"
+              "buildTarget": "bahdashych-on-security-admin:build:production"
             },
             "development": {
-              "buildTarget": "personal-blog-admin:build:development"
+              "buildTarget": "bahdashych-on-security-admin:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "personal-blog-admin:build"
+            "buildTarget": "bahdashych-on-security-admin:build"
           }
         },
         "test": {
