--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration production",
+    "admin:build": "ng build --configuration production",
+    "admin:restart": "pm2 restart bahdashych-on-security-admin",
+    "admin:process-start": "pm2 start npm --name \"bahdashych-on-security-admin\" -- start",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "format": "prettier --write \"{src,packages}/**/*.ts\" && eslint \"{src,packages}/**/*.ts\" --fix"
