implementation of the about page management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,7 +79,8 @@
         "src/libs/api/responses/projects/*",
         "src/libs/api/responses/changelog/*",
         "src/libs/api/responses/static-assets/*",
-        "src/libs/api/responses/site-config/*"
+        "src/libs/api/responses/site-config/*",
+        "src/libs/api/responses/about/*"
       ],
       "@payloads/*": [
         "src/libs/api/payloads/auth/*",
@@ -97,7 +98,8 @@
         "src/libs/api/payloads/projects/*",
         "src/libs/api/payloads/changelog/*",
         "src/libs/api/payloads/static-assets/*",
-        "src/libs/api/payloads/site-config/*"
+        "src/libs/api/payloads/site-config/*",
+        "src/libs/api/payloads/about/*"
       ],
       "@layouts/*": ["src/app/layouts/*"],
       "@guards/*": ["src/app/guards/*"],
