menu model and pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -82,7 +82,8 @@
         "src/libs/api/responses/site-config/*",
         "src/libs/api/responses/about/*",
         "src/libs/api/responses/contact/*",
-        "src/libs/api/responses/newsletter/*"
+        "src/libs/api/responses/newsletter/*",
+        "src/libs/api/responses/menu/*"
       ],
       "@payloads/*": [
         "src/libs/api/payloads/auth/*",
@@ -103,7 +104,8 @@
         "src/libs/api/payloads/site-config/*",
         "src/libs/api/payloads/about/*",
         "src/libs/api/payloads/contact/*",
-        "src/libs/api/payloads/newsletter/*"
+        "src/libs/api/payloads/newsletter/*",
+        "src/libs/api/payloads/menu/*"
       ],
       "@layouts/*": ["src/app/layouts/*"],
       "@guards/*": ["src/app/guards/*"],
