--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,13 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4200,
+            "host": "0.0.0.0",
+            "allowedHosts": [
+              "admin.mikhailbahdashych.me"
+            ]
+          },
           "configurations": {
             "production": {
               "buildTarget": "bahdashych-on-security-admin:build:production"
