--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,7 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/app/environments/environment.development.ts",
+                  "replace": "src/app/environments/environment.ts",
                   "with": "src/app/environments/environment.production.ts"
                 }
               ],
