--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "prod": "ng serve --configuration production",
-    "admin:build": "ng build --configuration production",
+    "admin:build": "ng build --configuration production && node scripts/replace-env.js",
     "admin:restart": "pm2 restart personal-blog-admin",
     "admin:process-start": "pm2 start npm --name \"personal-blog-admin\" -- run prod",
     "watch": "ng build --watch --configuration development",
